<resources>
    <string name="app_name">Quản Lý Nhân Viên V2</string>
    <string name="dangnhap">ĐĂNG NHẬP</string>
    <string name="dangky">ĐĂNG KÝ</string>
    <string name="hinttaikhoan">Nhập tên tài khoản</string>
    <string name="hintmatkhau">Nhập mật khẩu</string>
    <string name="hintnhaplaimatkhau">Nhập lại mật khẩu</string>
    <string name="thoat">Thoát</string>
    <string name="mnuitemnhanvien">Nhân viên</string>
    <string name="mnuitemphongban">Phòng ban</string>
    <string name="mnuitemhethong">Hệ thống</string>
    <string name="mnuitemlienhe">Liên hệ</string>
    <string name="tenphongban">Tên phòng ban</string>
    <string name="maphongban">Mã phòng ban</string>
    <string name="nhaptenphongban">Nhập tên phòng ban</string>
    <string name="nhapmaphongban">Nhập mã phòng ban</string>
    <string name="sonhanvien">Số nhân viên</string>
    <string name="themphongban">Thêm phòng ban</string>
    <string name="them">Thêm</string>
    <string name="huy">Hủy</string>
    <string name="hintnhaptenphongbanmoi">Nhập tên phòng ban mới</string>
    <string name="sua">Sửa</string>
    <string name="suaphongban">Sửa phòng ban</string>
    <string name="maphongban2">Mã phòng ban: </string>
    <string name="nhanvien">Nhân viên</string>
    <string name="tennhanvien">Tên nhân viên</string>
    <string name="sodienthoai">Số điện thoại</string>
    <string name="gioitinh">Giới tính</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="nhaptennhanvien">Nhập tên nhân viên</string>
    <string name="nhapsodienthoai">Nhập số điện thoại</string>
    <string name="nhapdiachi">Nhập địa chỉ</string>
    <string name="nhapemail">Nhập email</string>
    <string name="nhapmucluong">Nhập mức lương</string>
    <string name="nhapngaysinh">Nhập ngày sinh</string>
    <string name="thietlapmatkhau">Thiết lập mật khẩu</string>
    <string name="tendangnhap">Tên đăng nhập:</string>
    <string name="matkhau">Mật khẩu:</string>
    <string name="tendangnhapmoi">Tên đăng nhập mới:</string>
    <string name="matkhaumoi">Mật khẩu mới</string>
    <string name="nhaplaimatkhaumoi">Nhập lại mật khẩu mới:</string>
    <string name="lienhe">Thông tin tác giả</string>
    <string name="chuphinh">Chụp hình</string>
    <string name="chonhinh">Chọn hình</string>
</resources>
