<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sua_nhan_vien"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.hoangsv.quanlynhanvienv2.SuaNhanVienActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/personal"
            android:id="@+id/imgAnhNhanVienChiTietSuaNV"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:text="@string/chuphinh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnChupHinhSuaNV" />

            <Button
                android:text="@string/chonhinh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btnChonHinhSuaNV" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txtTenNhanVienSuaNV"
        android:hint="@string/nhaptennhanvien"
        android:inputType="textPersonName" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radGioiTinhSuaNV">

        <RadioButton
            android:text="@string/nam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radNamSuaNV"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/nu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radNuSuaNV"
            android:layout_weight="1" />
    </RadioGroup>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spPhongBanSuaNV" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/txtNgaySinhSuaNV"
        android:hint="@string/nhapngaysinh" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txtSoDienThoaiSuaNV"
        android:hint="@string/nhapsodienthoai"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txtEmailSuaNV"
        android:hint="@string/nhapemail"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txtDiaChiSuaNV"
        android:hint="@string/nhapdiachi"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtLuongSuaNV"
        android:hint="@string/nhapmucluong" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/sua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSuaNhanVien"
            android:layout_weight="1" />

        <Button
            android:text="@string/huy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnHuySuaNhanVien"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
