<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtTenNhanVien"
        tools:text="@string/tennhanvien"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp" />

    <TextView
        android:text="@string/gioitinh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtGioiTinh"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:text="@string/sodienthoai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtSoDienThoai"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

</LinearLayout>